--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ html {
   			background-size: cover;
 		}
 .text {
-	font-family: arial; font-weight: 100; font-color: white;
+	font-family: arial; font-weight: 100; color: white;
 }
